--- a/Lecture_3/Assignment_3/group_10_ass_3_2025/group_10_assignment3_2025.ipynb
+++ b/Lecture_3/Assignment_3/group_10_ass_3_2025/group_10_assignment3_2025.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c6282aef",
+   "id": "307fba10",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,14 +28,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b281d058",
+   "id": "529f47f8",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 67,
    "id": "91ffcdc7-5ec3-4b46-a35a-03c089b4fd38",
    "metadata": {},
    "outputs": [
@@ -71,16 +71,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 69,
    "id": "cca82893-eade-4dd2-b2a9-4109fb60bca4",
    "metadata": {},
    "outputs": [
     {
      "ename": "IndentationError",
-     "evalue": "expected an indented block after 'if' statement on line 2 (1903739685.py, line 4)",
+     "evalue": "expected an indented block after 'if' statement on line 2 (3911380441.py, line 4)",
      "output_type": "error",
      "traceback": [
-      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[8]\u001b[39m\u001b[32m, line 4\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31melse:\u001b[39m\n    ^\n\u001b[31mIndentationError\u001b[39m\u001b[31m:\u001b[39m expected an indented block after 'if' statement on line 2\n"
+      "\u001b[1;36m  Cell \u001b[1;32mIn[69], line 4\u001b[1;36m\u001b[0m\n\u001b[1;33m    else:\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m expected an indented block after 'if' statement on line 2\n"
      ]
     }
    ],
@@ -101,7 +101,7 @@
    "source": [
     "## Esto generaría un error de sintaxis (IndentationError o SyntaxError), porque en Python no puedes dejar un bloque if vacío.\n",
     "\n",
-    "## Por eso se usa pass: para que el bloque sea válido aunque no haga nada\"\""
+    "## Por eso se usa pass: para que el bloque sea válido aunque no haga nada"
    ]
   },
   {
@@ -112,49 +112,15 @@
    "outputs": [],
    "source": [
     "##2. Continue Statement\n",
-    "##Create a loop that goes through the string \"pythonloops\".\n",
-    "##Skip the letters \"o\" using the continue statement and print the remaining letters.\n",
-    "##Re-question: How would you achieve the same result without using continue?"
+    "\n",
+    "## Create a loop that goes through the string \"pythonloops\".\n",
+    "## Skip the letters \"o\" using the continue statement and print the remaining letters.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "id": "2ce96789-22fe-4949-91ef-58ac362ae4c4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for letra in \"pythonloops\":\n",
-    "    if letra == \"o\":    # cuando encuentra una \"o\"\n",
-    "        continue        # salta esa iteración\n",
-    "    print(letra)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "32c2043f-2862-488b-8da2-fff53a3403bd",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "041e4c92-2064-4e8a-8f1c-d3889026e253",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## Question 2Pass Statement\n",
-    "## Write a for loop that iterates through numbers from 1 to 10.\n",
-    "## Use the pass statement when the number is even, and print only the odd numbers.\n",
-    "## Re-question: What would happen if you remove the pass statement?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "d8a5af76-12e8-465e-93b3-392bf604ef14",
    "metadata": {},
    "outputs": [
     {
@@ -181,17 +147,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "832be596-bf0c-4aa3-8815-2af9de9d199a",
+   "execution_count": null,
+   "id": "b1d74e17",
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Re-question: What would happen if you remove the pass statement?"
+    "## Re-question: How would you achieve the same result without using continue?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 71,
    "id": "8e12b90c-6f52-444a-bf6b-b73a42ea7a80",
    "metadata": {},
    "outputs": [
@@ -372,7 +338,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "309316de",
+   "id": "d433836c",
    "metadata": {},
    "source": [
     "4. Try-Except Block - Write a loop that asks the user to input a number and divides 100 by that number. (Hecho por Georgina)\n",
@@ -383,14 +349,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b902395b",
+   "id": "3fea784f",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "82ce93be",
+   "id": "45140fcf",
    "metadata": {},
    "source": [
     "4. Bloque Try-Except - Escribe un bucle que pida al usuario que introduzca un número y divida 100 por ese número. (Hecho por Georgina)\n",
@@ -401,7 +367,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b81ceba9",
+   "id": "8aed8698",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -427,7 +393,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b904b9fa",
+   "id": "2667d04d",
    "metadata": {},
    "source": [
     "5. While Loop Structure - Write a while loop that calculates the factorial of a given number n. (Hecho por Georgina)\n",
@@ -439,7 +405,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f3ac7ed6",
+   "id": "7233dae5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -456,7 +422,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "230449e3",
+   "id": "731bfdc1",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -464,7 +430,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87533e52",
+   "id": "18ec0d9c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -492,7 +458,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "b0a9d7d8",
+   "id": "77e9a730",
    "metadata": {},
    "outputs": [
     {
@@ -513,7 +479,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "6787f727",
+   "id": "7e76d6ee",
    "metadata": {},
    "outputs": [
     {
@@ -534,7 +500,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "7b4706b6",
+   "id": "bf72362d",
    "metadata": {},
    "outputs": [
     {
@@ -555,7 +521,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "3c811fa2",
+   "id": "8b365bf7",
    "metadata": {},
    "outputs": [
     {
@@ -578,7 +544,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b36ca523",
+   "id": "b5ded815",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -588,7 +554,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "9dcf484d",
+   "id": "aac6e7ed",
    "metadata": {},
    "outputs": [
     {
@@ -610,7 +576,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "42a334e4",
+   "id": "7d4d2fef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -620,7 +586,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "16f6fcc7",
+   "id": "76c3ad78",
    "metadata": {},
    "outputs": [
     {
@@ -641,7 +607,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6f2d0d21",
+   "id": "13d19e97",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -649,7 +615,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "a2713190",
+   "id": "7dc6d8b3",
    "metadata": {},
    "outputs": [
     {
@@ -671,7 +637,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3b6d0849",
+   "id": "c435bea0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -681,7 +647,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "0be861bb",
+   "id": "59421e55",
    "metadata": {},
    "outputs": [
     {
@@ -701,7 +667,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "dc57e05b",
+   "id": "7da5f28e",
    "metadata": {},
    "outputs": [
     {
@@ -724,7 +690,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10567144",
+   "id": "c683406c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -734,7 +700,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "8af0f9e8",
+   "id": "12937eba",
    "metadata": {},
    "outputs": [
     {
@@ -754,7 +720,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "0ee02764",
+   "id": "22a327fa",
    "metadata": {},
    "outputs": [
     {
@@ -775,7 +741,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "65734123",
+   "id": "5e1814aa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -785,7 +751,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "221cb5b1",
+   "id": "02181b1e",
    "metadata": {},
    "outputs": [
     {
@@ -810,7 +776,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "f9723c90",
+   "id": "6b9d1b5c",
    "metadata": {},
    "outputs": [
     {
@@ -834,7 +800,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "473939f4",
+   "id": "9c1e51ca",
    "metadata": {},
    "outputs": [
     {
@@ -860,7 +826,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a0c6defe",
+   "id": "bec21c4a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -872,7 +838,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23d736ac",
+   "id": "b0f516c6",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -880,7 +846,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2201f65f",
+   "id": "0c48528c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -888,7 +854,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "7b08ab8f",
+   "id": "86efe05f",
    "metadata": {},
    "outputs": [
     {
