Se agrega ejercicios 4 y 5 de la parte 1

--- a/Lecture_3/Assignment_3/group_5_assignment3_2025/group_5_assignment3_2025.ipynb
+++ b/Lecture_3/Assignment_3/group_5_assignment3_2025/group_5_assignment3_2025.ipynb
@@ -9,8 +9,8 @@
     "\n",
     "Integrantes:\n",
     "- Lesly León (20166498)\n",
-    "- Susan Montalvo\n",
-    "- Vivian\n",
+    "- Susan Montalvo (20024577)\n",
+    "- Vivian \n",
     "- Esteban\n",
     "\n",
     "Fecha de entrega: 11/9/2025"
@@ -219,6 +219,136 @@
     "        continue\n",
     "    print(f\"You entered: {num}\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b25d48d3",
+   "metadata": {},
+   "source": [
+    "Write a loop that asks the user to input a number and divides 100 by that number."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "add690cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a number: 100\n",
+      "100 / 100.0 = 1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "while True:\n",
+    "    number = float(input(\"Enter a number: \"))\n",
+    "    result = 100 / number\n",
+    "    print(f\"100 / {number} = {result}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "79a37c78",
+   "metadata": {},
+   "source": [
+    "Use a try-except block to handle the case when the user inputs 0 or a non-numeric value."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5980fb76",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "while True:\n",
+    "    try:\n",
+    "        user_input = input(\"Enter a number (or 'quit' to exit): \")\n",
+    "        \n",
+    "        if user_input.lower() == 'quit':\n",
+    "            print(\"Goodbye!\")\n",
+    "            break\n",
+    "        \n",
+    "        number = float(user_input)\n",
+    "        result = 100 / number\n",
+    "        print(f\"100 divided by {number} equals {result}\")\n",
+    "        \n",
+    "    except ValueError:\n",
+    "        print(\"Error: Please enter a valid number!\")\n",
+    "    except ZeroDivisionError:\n",
+    "        print(\"Error: Cannot divide by zero!\")\n",
+    "    except KeyboardInterrupt:\n",
+    "        print(\"\\nGoodbye!\")\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ae427381",
+   "metadata": {},
+   "source": [
+    "Write a while loop that calculates the factorial of a given number 8"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ba38f78a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def factorial_while_loop(8):\n",
+    "    if 8 < 0:\n",
+    "        raise ValueError(\"Factorial is not defined for negative numbers\")\n",
+    "    if 8 == 0 or n == 1:\n",
+    "        return 1\n",
+    "    \n",
+    "    result = 1\n",
+    "    counter = 1\n",
+    "    \n",
+    "    while counter <= 8:\n",
+    "        result *= counter\n",
+    "        counter += 1\n",
+    "    \n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "11ccc4ce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Print each intermediate step of the factorial calculation."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "879dc32b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def factorial_while_loop_countdown(8):\n",
+    "\n",
+    "    if 8 < 0:\n",
+    "        raise ValueError(\"Factorial is not defined for negative numbers\")\n",
+    "    if 8 == 0 or 8 == 1:\n",
+    "        return 1\n",
+    "    \n",
+    "    result = 1\n",
+    "    \n",
+    "    while 8 > 1:\n",
+    "        result *= 8\n",
+    "        8 -= 1\n",
+    "    \n",
+    "    return result"
+   ]
   }
  ],
  "metadata": {
@@ -237,7 +367,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
