--- a/Lecture_3/Assignment_3/group_10_ass_3_2025/group_10_assignment3_2025.ipynb
+++ b/Lecture_3/Assignment_3/group_10_ass_3_2025/group_10_assignment3_2025.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "307fba10",
+   "id": "4cd4a1ee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "529f47f8",
+   "id": "8ffaa3e7",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -148,7 +148,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b1d74e17",
+   "id": "91143e1d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,13 +184,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "383aa27d",
+   "metadata": {},
+   "source": [
+    "3. Break Statement\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
    "id": "ec9ae2a1-6314-4769-b5a2-eeca0c954a3c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Question 3 Break Statement\n",
     "## Write a while loop that keeps asking the user to input numbers.\n",
     "## Break the loop if the user enters a negative number.\n",
     "## Re-question: How can you modify the loop so it ignores negative numbers instead of breaking?"
@@ -198,35 +205,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 72,
    "id": "5cc17591-a25c-4196-8bb8-4be004447cf1",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Ingresa un número:  5\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ingresaste: 5\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Ingresa un número:  -8\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Ingresa un número: 5\n",
+      "Ingresaste: 5\n",
+      "Ingresa un número: -5\n",
       "Número negativo detectado. Fin del programa.\n"
      ]
     }
@@ -261,53 +250,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "afe85c45-9308-4218-9270-ef30fa3df51d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Ingresa un número o 'q' para salir:  5\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Ingresaste: 5\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Ingresa un número o 'q' para salir:  'q'\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Ingresa un ENTERO válido o 'q' para salir.\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Ingresa un número o 'q' para salir:  q\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fin del programa.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "while True:\n",
     "    s = input(\"Ingresa un número o 'q' para salir: \").strip().lower()\n",
@@ -329,16 +275,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c78f63a3-18b0-48a4-9e49-5066cd624ee8",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
-   "id": "d433836c",
+   "id": "10da0e33",
    "metadata": {},
    "source": [
     "4. Try-Except Block - Write a loop that asks the user to input a number and divides 100 by that number. (Hecho por Georgina)\n",
@@ -349,14 +287,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3fea784f",
+   "id": "3ca7511b",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "45140fcf",
+   "id": "8726e418",
    "metadata": {},
    "source": [
     "4. Bloque Try-Except - Escribe un bucle que pida al usuario que introduzca un número y divida 100 por ese número. (Hecho por Georgina)\n",
@@ -367,7 +305,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8aed8698",
+   "id": "f066063a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -393,7 +331,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2667d04d",
+   "id": "6f56853e",
    "metadata": {},
    "source": [
     "5. While Loop Structure - Write a while loop that calculates the factorial of a given number n. (Hecho por Georgina)\n",
@@ -405,7 +343,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7233dae5",
+   "id": "9df5f218",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,7 +360,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "731bfdc1",
+   "id": "ec72e805",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -430,7 +368,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18ec0d9c",
+   "id": "fbdde502",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -458,7 +396,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "77e9a730",
+   "id": "a463d472",
    "metadata": {},
    "outputs": [
     {
@@ -479,7 +417,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "7e76d6ee",
+   "id": "11466469",
    "metadata": {},
    "outputs": [
     {
@@ -500,7 +438,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "bf72362d",
+   "id": "acbe52e3",
    "metadata": {},
    "outputs": [
     {
@@ -521,7 +459,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "8b365bf7",
+   "id": "64094c89",
    "metadata": {},
    "outputs": [
     {
@@ -544,7 +482,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b5ded815",
+   "id": "e741ee75",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -554,7 +492,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "aac6e7ed",
+   "id": "30e8c8fd",
    "metadata": {},
    "outputs": [
     {
@@ -576,7 +514,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7d4d2fef",
+   "id": "2076f417",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -586,7 +524,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "76c3ad78",
+   "id": "43875bd7",
    "metadata": {},
    "outputs": [
     {
@@ -607,7 +545,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13d19e97",
+   "id": "0751e574",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -615,7 +553,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "7dc6d8b3",
+   "id": "791ed20e",
    "metadata": {},
    "outputs": [
     {
@@ -637,7 +575,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c435bea0",
+   "id": "8c197ca5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -647,7 +585,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "59421e55",
+   "id": "6d80aa55",
    "metadata": {},
    "outputs": [
     {
@@ -667,7 +605,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "7da5f28e",
+   "id": "31aabda6",
    "metadata": {},
    "outputs": [
     {
@@ -690,7 +628,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c683406c",
+   "id": "b194d8cb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -700,7 +638,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "12937eba",
+   "id": "684a870e",
    "metadata": {},
    "outputs": [
     {
@@ -720,7 +658,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "22a327fa",
+   "id": "143e1e8b",
    "metadata": {},
    "outputs": [
     {
@@ -741,7 +679,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e1814aa",
+   "id": "1675d218",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -751,7 +689,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "02181b1e",
+   "id": "3798e1d7",
    "metadata": {},
    "outputs": [
     {
@@ -776,7 +714,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "6b9d1b5c",
+   "id": "7b4a3aa6",
    "metadata": {},
    "outputs": [
     {
@@ -800,7 +738,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "9c1e51ca",
+   "id": "3b9d1ef1",
    "metadata": {},
    "outputs": [
     {
@@ -826,7 +764,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bec21c4a",
+   "id": "587a365a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -838,7 +776,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b0f516c6",
+   "id": "7f3fec2f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -846,7 +784,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c48528c",
+   "id": "614e5b13",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -854,7 +792,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "86efe05f",
+   "id": "91c44e25",
    "metadata": {},
    "outputs": [
     {
