--- a/Lecture_3/Assignment_3/group_10_ass_3_2025/group_10_assignment3_2025.ipynb
+++ b/Lecture_3/Assignment_3/group_10_ass_3_2025/group_10_assignment3_2025.ipynb
@@ -366,13 +366,11 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3ad2dafd",
+   "cell_type": "markdown",
+   "id": "7416aedd",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "### Part 2:Functions"
+    "Part 2:Functions"
    ]
   },
   {
@@ -384,14 +382,6 @@
    "source": [
     "# 6 Función con múltiples retornos"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "466ee2d4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -416,18 +406,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "0945d275",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 6.2 Valor mínimo\n",
     "def analyze_numbers(lst):\n",
@@ -769,7 +751,7 @@
    "outputs": [],
    "source": [
     "print (\"Si se trata de multiplicar dos valores strings salta error, porque los strings solo se pueden multiplicar con un valor de integer,n\\\n",
-    "como se ha mostrado en los dos chunks anteriores. Para que se repita el string indicada por la cantidad de veces señalada en el integer, n\\\n",
+    "como se ha mostrado en los chunks anteriores. Para que se repita el string indicada por la cantidad de veces señalada en el integer, n\\\n",
     "se tiene que multiplicar el integer con el string, como se ha mostrado en los códigos previos.\")"
    ]
   },
