--- a/Lecture_3/Assignment_3/group_03_assignment3_2025/group_03_assignment3_2025.ipynb
+++ b/Lecture_3/Assignment_3/group_03_assignment3_2025/group_03_assignment3_2025.ipynb
@@ -587,6 +587,179 @@
     "Re-question: If strings are used as arguments, then:\n",
     "If one argument is a string and the other and integer, the Python will multiply the string by the number of times the integer indicates. If both arguments are strings, Python will generate an error, as two strings cannot be multiplied."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cf7c22a1-6c46-4354-a31d-6e101668b3c7",
+   "metadata": {},
+   "source": [
+    "# Part 3: Classes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "84cf00c7-d57c-4c4d-8542-4f8cdbe17b10",
+   "metadata": {},
+   "source": [
+    "This part was done by Valeria Ruiz. Due to issues with Github, she could not add the code, so I (Alfredo Espinoza) added it."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9c4ff101-0c52-4ff3-8944-348df102705d",
+   "metadata": {},
+   "source": [
+    "## Ejercicio 9: Clase Car"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "97fa080f-7ce7-4c07-96dd-5f54f328873d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Car:\n",
+    "    def __init__(self, brand, model, year):\n",
+    "        self.brand = brand\n",
+    "        self.model = model\n",
+    "        self.year = year\n",
+    "\n",
+    "    def display_info(self):\n",
+    "        print(f\"Car: {self.brand} {self.model}, Year: {self.year}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1ddbb962-c533-4eca-bdac-6722f2327e86",
+   "metadata": {},
+   "source": [
+    "### Ejemplo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "c3b7ea90-67d2-4bf8-aa52-7e8d56381cd8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "car1 = Car(\"Toyota\", \"Corolla\", 2020)\n",
+    "car2 = Car(\"Honda\", \"Civic\", 2022)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "50889ede-f3c2-4be2-92a1-73e7e151dec1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Car: Toyota Corolla, Year: 2020\n",
+      "Car: Honda Civic, Year: 2022\n"
+     ]
+    }
+   ],
+   "source": [
+    "car1.display_info()\n",
+    "car2.display_info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f8ea29cb-baf2-497c-8b8f-b054f38f108c",
+   "metadata": {},
+   "source": [
+    "## Ejercicio 10: Clase Student"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "108aceea-78b8-45b3-a350-58455b939f5f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Student:\n",
+    "    # atributo de clase\n",
+    "    school = \"PUCP\"\n",
+    "\n",
+    "    def __init__(self, name, age, grade):\n",
+    "        self.name = name\n",
+    "        self.age = age\n",
+    "        self.grade = grade\n",
+    "\n",
+    "    def is_passed(self):\n",
+    "        if self.grade >= 11:\n",
+    "            return \"Passed\"\n",
+    "        else:\n",
+    "            return \"Failed\"\n",
+    "\n",
+    "    def display_info(self):\n",
+    "        print(f\"Student: {self.name}, Age: {self.age}, Grade: {self.grade}, School: {Student.school}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9685748d-e9ed-4833-a4d2-663424edbea9",
+   "metadata": {},
+   "source": [
+    "### Ejemplo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "5141db24-706e-4e46-a0ba-b3ded2c5c3e2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "student1 = Student(\"Ana\", 20, 15)\n",
+    "student2 = Student(\"Luis\", 19, 9)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "8e12edd9-8ff2-44b0-9244-66ea97623a17",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Passed\n",
+      "Failed\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(student1.is_passed())  # Passed\n",
+    "print(student2.is_passed())  # Failed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "88b55f27-16c0-4660-b610-c1b90e62c6e4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Student: Ana, Age: 20, Grade: 15, School: PUCP\n",
+      "Student: Luis, Age: 19, Grade: 9, School: PUCP\n"
+     ]
+    }
+   ],
+   "source": [
+    "student1.display_info()\n",
+    "student2.display_info()"
+   ]
   }
  ],
  "metadata": {
