#1831 Added group information
#1831 Added group information

--- a/Lecture_3/Assignment_3/group_03_assignment3_2025/group_03_assignment3_2025.ipynb
+++ b/Lecture_3/Assignment_3/group_03_assignment3_2025/group_03_assignment3_2025.ipynb
@@ -1,6 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d2775ce0-c396-4dfe-b120-9db3c896ee0a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Assignment 3\n",
+    "Armando Pezo\n",
+    "Freddy Zuta\n",
+    "Valeria Ruiz\n",
+    "Alfredo Espinoza"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "e66b5393",
    "metadata": {},
