--- a/Lecture_3/Assignment_3/group_03_assignment3_2025/group_03_assignment3_2025.ipynb
+++ b/Lecture_3/Assignment_3/group_03_assignment3_2025/group_03_assignment3_2025.ipynb
@@ -1,13 +1,11 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d2775ce0-c396-4dfe-b120-9db3c896ee0a",
+   "cell_type": "markdown",
+   "id": "00f9437e-e04c-4d38-9556-42d910092d7d",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "Assignment 3\n",
+    "# Assignment 3\n",
     "Armando Pezo\n",
     "Freddy Zuta\n",
     "Valeria Ruiz\n",
