--- a/Lecture_3/Assignment_3/group_10_ass_3_2025/group_10_assignment3_2025.ipynb
+++ b/Lecture_3/Assignment_3/group_10_ass_3_2025/group_10_assignment3_2025.ipynb
@@ -343,10 +343,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "5e48332b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 5.1. Print each intermediate step of the factorial calculation.\n",
+    "n = int(input(\"Enter a number: \"))\n",
+    "factorial = 1\n",
+    "i = 1\n",
+    "\n",
+    "while i <= n:\n",
+    "    factorial *= i\n",
+    "    print(f\"Step {i}: factorial = {factorial}\")\n",
+    "    i += 1\n",
+    "\n",
+    "print(f\"Factorial of {n} is {factorial}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "320ffdff",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 5.2. Re-question: How would you implement the same factorial calculation using a for loop instead?\n",
     "n = int(input(\"Enter a number: \"))\n",
     "factorial = 1\n",
     "\n",
@@ -358,16 +379,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f1ce803a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
-   "id": "7416aedd",
+   "id": "afb0d659",
    "metadata": {},
    "source": [
     "Part 2:Functions"
@@ -751,17 +764,9 @@
    "outputs": [],
    "source": [
     "print (\"Si se trata de multiplicar dos valores strings salta error, porque los strings solo se pueden multiplicar con un valor de integer,n\\\n",
-    "como se ha mostrado en los chunks anteriores. Para que se repita el string indicada por la cantidad de veces señalada en el integer, n\\\n",
+    "como se ha mostrado en los cell anteriores. Para que se repita el string indicada por la cantidad de veces señalada en el integer, n\\\n",
     "se tiene que multiplicar el integer con el string, como se ha mostrado en los códigos previos.\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7f12e97e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -772,32 +777,11 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "3bc0d049",
+   "cell_type": "markdown",
+   "id": "3a359f27",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1, 2, 3, 4, 5]"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c9fbcd68",
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "### Part 3: Classes"
+    "Part 3: Classes"
    ]
   },
   {
