--- a/Lecture_3/Assignment_3/group_01_assignment3_2025.ipynb
+++ b/Lecture_3/Assignment_3/group_01_assignment3_2025.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "701a1716-8225-4e1c-87f6-0e8d27804f34",
    "metadata": {},
    "outputs": [
@@ -33,11 +33,11 @@
    ],
    "source": [
     "# Use the pass statement when the number is even, and print only the odd numbers.\n",
-    "for n in range(1, 11):\n",
-    "    if n % 2 == 0:\n",
-    "        pass          # si es par, no hago nada\n",
+    "for num in range(1, 11):\n",
+    "    if num % 2 == 0:\n",
+    "        pass          # si es par, pasar\n",
     "    else:\n",
-    "        print(n)      # solo imprime los impares"
+    "        print(num)    # solo imprime los impares"
    ]
   },
   {
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "5a4252f3-940a-4fd9-a3e8-bcd9c1ef9d38",
    "metadata": {},
    "outputs": [
@@ -84,7 +84,7 @@
     }
    ],
    "source": [
-    "# corrected version - Opción A\n",
+    "# corrected version - Opción A para seguir imprimiendo even\n",
     "for n in range(1, 11):\n",
     "    if n % 2 != 0:\n",
     "        print(n)"
@@ -109,7 +109,7 @@
     }
    ],
    "source": [
-    "# corrected version - Opción B\n",
+    "# corrected version - Opción B para seguir imprimiendo even\n",
     "for n in range(1, 11):\n",
     "    if n % 2 == 0:\n",
     "        continue\n",
