--- a/Lecture_2/Lecture_2.ipynb
+++ b/Lecture_2/Lecture_2.ipynb
@@ -5219,9 +5219,9 @@
  "metadata": {
   "hide_input": false,
   "kernelspec": {
-   "display_name": "Python (envvivi)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "envvivi"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -5233,7 +5233,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.11.5"
   },
   "vscode": {
    "interpreter": {
